# merino-vss

./: README.md  main.py  pyproject.toml
artifacts/: centroids.faiss  centroids_meta.json  exemplars.faiss  exemplars_meta.json
data/: test.jsonl  train.jsonl
scripts/: bench.py  build_index.py  query.py
vss/: __init__.py  bench.py  intent_faiss.py
